Overflow:hidden added to work to stop sidebar after element from running down the page.

--- a/client/less/template/work.import.less
+++ b/client/less/template/work.import.less
@@ -5,6 +5,7 @@
     border-top: 5px solid @teal;
     margin:0px;
     min-height: 1000px;
+    overflow: hidden;
     button.work-filter {
         position: absolute;
         right: 0px;
